No empty Collada mesh import possible #50004

Closed
opened 2016-11-12 12:34:51 +01:00 by Daniel · 7 comments

System Information
Win 10 64bit

Blender Version
Broken: 2.78a e8299c9

The Collada exporter is capable of export empty meshes but cannot (re)import them.

When a Collada file is exported from this scene empty.blend the empty mesh is also written to the Collada file like "<float_array id="empty-mesh-positions-array" count="0"/>" is present (empty.dae) but the empty mesh and object is ignored when importing the Collada file.

**System Information** Win 10 64bit **Blender Version** Broken: 2.78a e8299c9 The Collada exporter is capable of export empty meshes but cannot (re)import them. When a Collada file is exported from this scene [empty.blend](https://archive.blender.org/developer/F397919/empty.blend) the empty mesh is also written to the Collada file like "<float_array id="empty-mesh-positions-array" count="0"/>" is present ([empty.dae](https://archive.blender.org/developer/F397922/empty.dae)) but the empty mesh and object is ignored when importing the Collada file.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @bestdani

Added subscriber: @bestdani

Added subscribers: @GaiaClary, @brecht

Added subscribers: @GaiaClary, @brecht
Gaia Clary was assigned by Brecht Van Lommel 2016-11-12 20:42:17 +01:00

Assigning to @gaiaclary.

The importer has an explicit check to skip such meshes, probably it's fine to just remove that? I don't see a reason to consider this an error.

    if (mesh->getPositions().empty()) {
        fprintf(stderr, "ERROR: Mesh %s has no vertices.\n", name.c_str());
        return false;
    }
Assigning to @gaiaclary. The importer has an explicit check to skip such meshes, probably it's fine to just remove that? I don't see a reason to consider this an error. ``` if (mesh->getPositions().empty()) { fprintf(stderr, "ERROR: Mesh %s has no vertices.\n", name.c_str()); return false; } ```

This issue was referenced by 447fc7c4ce

This issue was referenced by 447fc7c4ce3e2c7ddc0590a0373b5831304745e2
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Hi, Daniel;

Thanks for reporting!
Indeed it makes sense to allow the import of empty meshes as well.

Hi, Daniel; Thanks for reporting! Indeed it makes sense to allow the import of empty meshes as well.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#50004
No description provided.