fix T50004: Removed check for empty mesh and adjusted the vertex import function to accept meshes without vertices as well